fix auth for sells
